src/index.css
@import "tailwindcss";



@property --angle {
  syntax: '<angle>';
  initial-value: 0deg;
  inherits: false;
}

.border-animate {
  padding: 1.5px;
  background: conic-gradient(
    from var(--angle),
    transparent 0deg,
    transparent 260deg,
    rgba(0,232,255,0.1) 290deg,
    rgba(0,232,255,0.9) 320deg,
    #86b4b4 340deg,
    rgba(0,232,255,0.9) 355deg,
    transparent 360deg
  );
  -webkit-mask:
    linear-gradient(#fff 0 0) content-box,
    linear-gradient(#fff 0 0);
  -webkit-mask-composite: xor;
  mask-composite: exclude;
  animation: borderRotate 3s linear infinite;
}

@keyframes borderRotate {
  to {
    --angle: 360deg;
  }
}


@font-face {
  font-family: "Neue Haas Grotesk Text Pro";
  src: url("./assets/font/NeueHaasDisplayXXThin.ttf") format("truetype");
  font-weight: 100;
  font-style: normal;
}

@font-face {
  font-family: "Neue Haas Grotesk Text Pro";
  src: url("./assets/font/NeueHaasDisplayXThin.ttf") format("truetype");
  font-weight: 200;
  font-style: normal;
}

@font-face {
  font-family: "Neue Haas Grotesk Text Pro";
  src: url("./assets/font/NeueHaasDisplayThin.ttf") format("truetype");
  font-weight: 300;
  font-style: normal;
}

@font-face {
  font-family: "Neue Haas Grotesk Text Pro";
  src: url("./assets/font/NeueHaasDisplayLight.ttf") format("truetype");
  font-weight: 300;
  font-style: normal;
}

@font-face {
  font-family: "Neue Haas Grotesk Text Pro";
  src: url("./assets/font/NeueHaasDisplayRoman.ttf") format("truetype");
  font-weight: 400;
  font-style: normal;
}

@font-face {
  font-family: "Neue Haas Grotesk Text Pro";
  src: url("./assets/font/NeueHaasDisplayMedium.ttf") format("truetype");
  font-weight: 500;
  font-style: normal;
}

@font-face {
  font-family: "Neue Haas Grotesk Text Pro";
  src: url("./assets/font/NeueHaasDisplayBold.ttf") format("truetype");
  font-weight: 700;
  font-style: normal;
}

@font-face {
  font-family: "Neue Haas Grotesk Text Pro";
  src: url("./assets/font/NeueHaasDisplayBlack.ttf") format("truetype");
  font-weight: 900;
  font-style: normal;
}


.text-base-haas {
  font-family: 'Neue Haas Grotesk Text Pro';
  @apply font-normal text-[14px] tracking-[0%] bg-transparent placeholder:text-white/25 text-left focus:outline-hidden outline-hidden! border-none leading-[150%] text-[#ffffffd9] w-full;
}

.billing-fieldset legend {
  font-family: 'Neue Haas Grotesk Text Pro';
  @apply font-normal text-[12px] leading-[150%] tracking-[0%] text-white;
}


/* BillingInfo start */


.billing-fieldset {
  font-family: 'Neue Haas Grotesk Text Pro';
  @apply m-0 box-border min-h-14 flex flex-col justify-center px-4 pt-1.5 pb-3.5 rounded-[14px];
  border: 1.5px solid #ffffff59;
}
.billing-fieldset legend {
  font-family: 'Neue Haas Grotesk Text Pro';
  @apply px-1 text-[12px] leading-none text-white/60 mb-[3px];
}

.billing-empty {
  font-family: 'Neue Haas Grotesk Text Pro';
  @apply min-h-[54px] flex items-center px-4 pt-[6px] pb-[14px] border-[1.5px] border-white/35 rounded-[14px] ;
}

.billing-input {
  font-family: 'Neue Haas Grotesk Text Pro';
  @apply w-full h-full flex-1 bg-transparent outline-none border-none text-[14px] text-white/85 h-full leading-[1.2];
}





/* sidebar start */

.label-span {
  font-family: 'Neue Haas Grotesk Text Pro';
  @apply relative z-10 font-normal;
  color: #FFFFFFB2;
  font-size: 16px;
  line-height: 150%;
  letter-spacing: 0px;
}



.group-label {
  font-family: 'Neue Haas Grotesk Text Pro';
  font-weight: 400;
  font-size: 12px;
  line-height: 160%;
  color: #FFFFFF80;
  text-transform: uppercase;
  
}



.nav-item {
  @apply relative w-full text-white flex items-center gap-[8px] px-[28px] py-2 rounded-lg overflow-hidden leading-[150%];
}




.logo-e8 {
  @apply font-bold text-[32px] leading-[160%] uppercase text-white;
}

.logo-markets {
  @apply font-medium text-[12px] leading-[160%] uppercase text-white;
}

/* Navbar starts */



.james-name {
  font-family: 'Neue Haas Grotesk Text Pro';
  font-weight: 500;
  @apply  text-[16px] leading-[150%] text-white;
}

.E8-Accoun {
  font-family: 'Neue Haas Grotesk Text Pro';
  font-weight: 500;
  @apply  text-[16px] leading-[150%] text-white;
}


.gmail {
  font-family: 'Neue Haas Grotesk Text Pro';
  font-weight: 400;
}




/* Billing */
.user {
   font-family: 'Neue Haas Grotesk Text Pro';
  font-weight: 500;
}



/* EconomicCalendar */
.filter-label {
  font-family: 'Neue Haas Grotesk Text Pro';
  font-weight: 400;
  font-size: 12px;
  line-height: 150%;
  color: #FFFFFFB2;
  
}
.table-header {
  font-family: 'Neue Haas Grotesk Text Pro';
  font-weight: 500;
  font-size: 16px;
  line-height: 150%;
  color: white;
  -webkit-font-smoothing: antialiased;
}

